--- a/templates/home.html
+++ b/templates/home.html
@@ -3,42 +3,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - {% block titile %}Main{% endblock titile %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - {% block titile %}Main{% endblock titile %}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
   {% include 'includes/nav.html' %}
-    <hr class="container">
-    {% block content %}
-    <div class="vid container ">
-        {% for v in vid %}
-        <div class="wrap">
-                <div class="height">
-                   <img src="{{ v.img.url }}" alt="..." id="img" >
-                   <div class="flex">
-                    <h1 class="text-center mt-2">{{ v.img_title }}</h1>
-                   </div>
-                   <a href="{{ v.img.url }}" download class="btn btn-secondary">Download</a>
-                   
-                </div>
+  <hr class="container">
+  {% block content %}
+  <div class="vid container ">
+    {% for v in vid %}
+    <div class="wrap">
+      <div class="height">
+        <img src="{{ v.img.url }}" alt="..." id="img">
+        <div class="flex">
+          <h1 class="text-center mt-2">{{ v.img_title }}</h1>
         </div>
-        {% endfor %}
+
+        <a href="{{ v.img.url }}" download class="btn btn-secondary">Download</a>
+        <a href="#"><i class="fa-solid fa-expand fa-lg text-dark"></i></a>
+      </div>
     </div>
-    {% endblock content %}
+
+
+    {% endfor %}
+  </div>
+  {% endblock content %}
 
 
 
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 
-    <script src="{% static 'js/main.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="{% static 'js/main.js' %}"></script>
 </body>
 
 </html>
