--- a/templates/results.html
+++ b/templates/results.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+{% load static %}
 {% if video %}
 <div class="vid w-100 container ">
   {% for v in video %}
@@ -10,6 +11,7 @@
         <img src="{{ v.img.url }}" alt="..." id="vid" width="300">
         <h1 class="text-center mt-2">{{ v.img_title }}</h1>
         <a href="{{ v.img.url }}" download="{{ v.img.url }}" class="btn btn-secondary">Download</a>
+        <i class="fa-solid fa-expand fa-lg icon"></i>
       </div>
     </div>
   {% endfor %}
@@ -29,3 +31,5 @@
 </div>
 {% endif %}
 {% endblock content %}
+
+<script src="{% static 'js/main.js' %}"></script>
