--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
         </div>
 
         <a href="{{ v.img.url }}" download class="btn btn-secondary">Download</a>
-        <a href="{% url 'app:fullscreen' v.pk %}"><i class="fa-solid fa-expand fa-lg text-dark"></i></a>
+        <a href="#"><i class="fa-solid fa-expand fa-lg text-dark"></i></a>
       </div>
     </div>
 
@@ -45,7 +45,7 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
 
   <script src="{% static 'js/main.js' %}"></script>
 </body>
