--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -75,10 +75,10 @@
                       <i class="fab fa-facebook-f fa-lg"></i>
                     </button>
                     <a href="{{ request.user.telegram }}" class="btn btn-outline-primary btn-floating">
-                      <i class="fab fa-twitter fa-lg"></i>
+                      <i class="fab fa-telegram fa-lg"></i>
                     </a>
                     <a href="{{ request.user.instagram }}" class="btn btn-outline-primary btn-floating">
-                      <i class="fab fa-skype fa-lg"></i>
+                      <i class="fab fa-instagram fa-lg"></i>
                     </a>
                   </div>
                   <a href="{% url 'app:settings' %}" class="btn btn-primary btn-rounded btn-lg">
