--- a/templates/profile/edit_profile.html
+++ b/templates/profile/edit_profile.html
@@ -87,11 +87,13 @@
         let instagram = document.getElementById('id_instagram')
         let telegram = document.getElementById('id_telegram')
         let pinterset = document.getElementById('id_pinterest')
+        let website = document.getElementById('id_website')
 
-        facebook.placeholder = "Facebook account links here"
-        instagram.placeholder = "instagram account links here"
-        telegram.placeholder = "telegram account links here"
-        pinterset.placeholder = "pinterset account links here"
+        facebook.placeholder = "username in facebook"
+        instagram.placeholder = "username in instagram"
+        telegram.placeholder = "username in telegram"
+        pinterset.placeholder = "username in pinterest"
+        website.placeholder = "website link here"
     </script>
 </body>
 
