--- a/templates/profile/edit_profile.html
+++ b/templates/profile/edit_profile.html
@@ -88,12 +88,13 @@
         let telegram = document.getElementById('id_telegram')
         let pinterset = document.getElementById('id_pinterest')
         let website = document.getElementById('id_website')
-
         facebook.placeholder = "username in facebook"
         instagram.placeholder = "username in instagram"
         telegram.placeholder = "username in telegram"
         pinterset.placeholder = "username in pinterest"
         website.placeholder = "website link here"
+
+        alert("You can't add a picture for your profile yet, but you can remove it at any time")
     </script>
 </body>
 
