--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -2,126 +2,109 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-  {% if not request.user.is_authenticated %}
-    <style>
-        body{
-            display: grid;
-            place-items: center;
-            min-height: 100vh;
-        }
-    </style>
-    <div class="d-flex align-items-center justify-content-center">
-        <div class="text-center">
-            <h1 class="display-1 fw-bold">404</h1>
-            <p class="fs-3"> <span class="text-danger">Opps!</span> You are not registered </p>
-            <p class="lead">
-              err_user
-              </p>
-            <a href="{% url 'app:signup' %}" class="btn btn-primary">Go registered</a>
-        </div>
-      </div>
 
-{% endif %}
-{% if  request.user.is_authenticated %}
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <style>
+    body {
+      display: grid;
+      place-items: center;
+      min-height: 100vh;
+    }
+  </style>
+  <div class="d-flex align-items-center justify-content-center">
+    <div class="text-center">
+      <h1 class="display-1 fw-bold">404</h1>
+      <p class="fs-3"> <span class="text-danger">Opps!</span> You are not registered </p>
+      <p class="lead">
+        err_user
+      </p>
+      <a href="{% url 'app:signup' %}" class="btn btn-primary">Go registered</a>
+    </div>
+  </div>
+
+  {% endif %}
+  {% if request.user.is_authenticated %}
   <style>
     .gohome {
-            position: fixed;
-            top: 30px;
-            text-decoration: none;
-            color: black;
-            left: 40px;
-            font-size: 2rem;
-        }
+      position: fixed;
+      top: 30px;
+      text-decoration: none;
+      color: black;
+      left: 40px;
+      font-size: 2rem;
+    }
   </style>
   <section class="vh-100" style="background-color: #eee;">
     <a class="gohome" href="{% url 'app:home' %}"><i class="fa-solid fa-arrow-left"></i></a>
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-12 col-xl-4">
-      
-              <div class="card" style="border-radius: 15px;">
-                <div class="card-body text-center">
-                  <div class="mt-3 mb-4">
-                    {% if request.user.img %}
-                    <img src="{{ request.user.img.url }}"
-                      class="rounded-circle img-fluid" style="width: 100px;" />
-                      {% endif %}
-                      {% if not request.user.img %}
-                      <img src="{% static 'imgs/userprofile.png' %}"
-                        class="rounded-circle img-fluid" style="width: 100px;" />
-                        {% endif %}
-                  </div>
-                  <h4 class="mb-2">{% if request.user.first_name %}{{ request.user.first_name }}{% endif %}{% if not request.user.first_name %}  {% endif %} . {% if request.user.last_name %}{{ request.user.last_name }}{% endif %}{% if not request.user.last_name %}  {% endif %} </h4>
-                  <p class="text-muted mb-4">@{{request.user.username }}<span class="mx-2">|</span> <a
-                      href="mailto:{{ request.user.email }}">{{ request.user.email }}</a></p>
-                      <div class="flex">
-                        {% if request.user.bio %}
-                        <h4>Bio: {{ request.user.bio }}</h4>
-                        {% endif %}
-                        {% if not request.user.bio %}
-                        <a href="{% url 'app:edit_profile' %}">your bio here</a>
-                        {% endif %}
-                        {% if request.user.website %}
-                        <a href="{{ request.user.website }}" target="_blank">{{ request.user.website }}</a>
-                        {% endif %}
-                        {% if not request.user.website %}
-                        {% endif %}
-                      </div>
-                  <div class="mb-4 pb-2">
-                    {% if request.user.facebook %}
-                    <a href="https://fb.com/{{ request.user.facebook }}" target="_blank" class="btn btn-outline-primary btn-floating">
-                      <i class="fab fa-facebook-f fa-lg"></i>
-                    </a>
-                    {% endif %}
-                    {% if not request.user.facebook %}
-                    {% endif %}
-                    {% if request.user.telegram %}
-                    <a href="https://t.me/{{ post.user.profile.telegram }}" target="_blank" class="btn btn-outline-primary btn-floating">
-                      <i class="fab fa-telegram fa-lg"></i>
-                    </a>
-                    {% endif %}
-                    {% if not request.user.telegram %}
-                    {% endif %}
-                    {% if request.user.instagram %}
-                    <a href="https://instagram.com/{{ request.user.instagram }}" target="_blank" class="btn btn-outline-primary btn-floating">
-                      <i class="fab fa-instagram fa-lg"></i>
-                    </a>
-                    {% endif %}
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-12 col-xl-4">
 
-                  </div>
-                  <a href="{% url 'app:edit_profile' %}" class="btn btn-primary btn-rounded btn-lg">
-                    Edit Profile
-                  </a>
-                  <div class="d-flex justify-content-between text-center mt-5 mb-2">
-                    <div>
-                      <p class="mb-2 h5">0</p>
-                      <p class="text-muted mb-0">Posts</p>
-                    </div>
-                    <div class="px-3">
-                      <p class="mb-2 h5">0</p>
-                      <p class="text-muted mb-0">Followers</p>
-                    </div>
-                    <div>
-                      <p class="mb-2 h5">0</p>
-                      <p class="text-muted mb-0">Following</p>
-                    </div>
-                  </div>
+          <div class="card" style="border-radius: 15px;">
+            <div class="card-body text-center">
+              <div class="mt-3 mb-4">
+                {% if request.user.img %}
+                <img src="{{ request.user.img.url }}" class="rounded-circle img-fluid" style="width: 100px;" />
+                {% endif %}
+                {% if not request.user.img %}
+                <img src="{% static 'imgs/userprofile.png' %}" class="rounded-circle img-fluid" style="width: 100px;" />
+                {% endif %}
+              </div>
+              <h4 class="mb-2">{% if request.user.first_name %}
+                {{ request.user.first_name }}
+                {% endif %}
+                {% if notrequest.user.first_name %} {% endif %} .
+                 {% if request.user.last_name %}{{ request.user.last_name }}{%endif %}
+                 {% if not request.user.last_name %} {% endif %} </h4>
+              <p class="text-muted mb-4">@{{request.user.username }}<span class="mx-2">|</span> <a
+                  href="mailto:{{ request.user.email }}">{{ request.user.email }}</a></p>
+
+              <div class="mb-4 pb-2">
+
+                {% if request.user.bio %}
+                <h4>Bio: {{ request.user.bio }}</h4>
+                {% endif %}
+                {% if not request.user.bio %}
+                <a href="{% url 'app:edit_profile' %}">your bio here</a>
+                {% endif %}
+
+
+              </div>
+              <a href="{% url 'app:edit_profile' %}" class="btn btn-primary btn-rounded btn-lg">
+                Edit Profile
+              </a>
+              <div class="d-flex justify-content-between text-center mt-5 mb-2">
+                <div>
+                  <p class="mb-2 h5">0</p>
+                  <p class="text-muted mb-0">Posts</p>
+                </div>
+                <div class="px-3">
+                  <p class="mb-2 h5">0</p>
+                  <p class="text-muted mb-0">Followers</p>
+                </div>
+                <div>
+                  <p class="mb-2 h5">0</p>
+                  <p class="text-muted mb-0">Following</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </div>
+  </section>
 </body>
-</html>
 
-{% endif %}
+</html>
