--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  {% if not request.user.is_authenticated %}
   <style>
     body {
       display: grid;
@@ -105,6 +106,7 @@
       </div>
     </div>
   </section>
+  {% endif %}
 </body>
 
 </html>
