--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,9 +74,15 @@ nav .profile{
     font-size: 1.5rem;
 }
 
-
-@media (width:800px) {
-
+.vid h1{
+    position: relative;
 }
 
+.vid h1 a{
+    position: absolute;
+    top: 10px;
+    left: 340px;
+    color: #000;
+    font-size: 22px;
+}
 
