--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -46,6 +46,13 @@
       left: 40px;
       font-size: 2rem;
     }
+    #profil{
+      width: 120px;
+      height: 120px;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 50%;
+    }
   </style>
   <section class="vh-100" style="background-color: #eee;">
     <a class="gohome" href="{% url 'app:home' %}"><i class="fa-solid fa-arrow-left"></i></a>
@@ -57,7 +64,7 @@
             <div class="card-body text-center">
               <div class="mt-3 mb-4">
                 {% if request.user.img %}
-                <img src="{{ request.user.img.url }}" class="rounded-circle img-fluid" style="width: 100px;" />
+                <img src="{{ request.user.img.url }}" alt="..."  id="profil">
                 {% endif %}
                 {% if not request.user.img %}
                 <img src="{% static 'imgs/userprofile.png' %}" class="rounded-circle img-fluid" style="width: 100px;" />
