--- a/templates/profile/edit_profile.html
+++ b/templates/profile/edit_profile.html
@@ -75,7 +75,7 @@
     <a class="gohome" href="{% url 'app:home' %}"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="container text-light" style="width: 600px;">
         <h1>Edit profile</h1>
-        <form method="post" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data"><!-- bu yerda ## enctype="multipart/form-data" ## rasm yuklash uchun  -->
            <div id="owerflow">
             {% csrf_token %}
             {{ form|crispy }}
