--- a/templates/profile/public.html
+++ b/templates/profile/public.html
@@ -1,18 +1,99 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% if user %}
-    <h1>{{ user.username }}</h1>
 
-    {% endif %}
-    {% if not user %}
-    <h1>user not found</h1>
-    {% endif %}
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile - {{ user.username }}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+
+
+  <style>
+    .gohome {
+      position: fixed;
+      top: 30px;
+      text-decoration: none;
+      color: black;
+      left: 40px;
+      font-size: 2rem;
+    }
+    #profil{
+      width: 120px;
+      height: 120px;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 50%;
+    }
+  </style>
+  <section class="vh-100" style="background-color: #eee;">
+    <a class="gohome" href="{% url 'app:home' %}"><i class="fa-solid fa-arrow-left"></i></a>
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-12 col-xl-4">
+
+          <div class="card" style="border-radius: 15px;">
+            <div class="card-body text-center">
+              <div class="mt-3 mb-4">
+                {% if user.img %}
+                <img src="{{ user.img.url }}" alt="..."  id="profil">
+                {% endif %}
+                {% if not user.img %}
+                <img src="{% static 'imgs/userprofile.png' %}" class="rounded-circle img-fluid" style="width: 100px;" />
+                {% endif %}
+              </div>
+              <h4 class="mb-2">{% if user.first_name %}
+                {{ user.first_name }}
+                {% endif %}
+                {% if not user.first_name %} {% endif %} .
+                 {% if user.last_name %}{{ user.last_name }}{%endif %}
+                 {% if not user.last_name %} {% endif %} </h4>
+              <p class="text-muted mb-4">@{{user.username }}<span class="mx-2">|</span> <a
+                  href="mailto:{{ user.email }}">{{ user.email }}</a></p>
+
+              <div class="mb-4 pb-2">
+
+                {% if user.bio %}
+                <h4>Bio: {{ user.bio }}</h4>
+                {% endif %}
+                {% if not user.bio %}
+                
+                {% endif %}
+        
+                <a href="#" class="btn btn-info w-50 mt-2 text-light text-center">Follow</a>
+
+              </div>
+              
+              <div class="d-flex justify-content-between text-center mt-5 mb-2">
+                <div>
+                  <p class="mb-2 h5">0</p>
+                  <p class="text-muted mb-0">Posts</p>
+                </div>
+                <div class="px-3">
+                  <p class="mb-2 h5">0</p>
+                  <p class="text-muted mb-0">Followers</p>
+                </div>
+                <div>
+                  <p class="mb-2 h5">0</p>
+                  <p class="text-muted mb-0">Following</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
+
 </html>
