--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -25,6 +25,7 @@
             {% if request.user.is_authenticated %}
             <li><a href="{% url 'app:profile' %}" class="dropdown-item">Profile</a></li>
             <li><a href="{% url 'app:edit_profile' %}" class="dropdown-item">Edit Profile</a></li>
+            <li><a href="{% url 'app:addpost' %}" class="dropdown-item">Add Post</a></li>
             <li><a href="#" class="dropdown-item">Settings</a></li>
             <hr>
             <li><a href="{% url 'logout' %}" class="dropdown-item">Log Out</a></li>
