--- a/templates/results.html
+++ b/templates/results.html
@@ -26,7 +26,7 @@
       <h1 class="display-1 fw-bold">404</h1>
       <p class="fs-3"> <span class="text-danger">Opps!</span> {{ value }} not found</p>
       <p class="lead">
-        There are no videos matching your request...
+        There are no posts matching your request...
         </p>
       <a href="{% url 'app:home' %}" class="btn btn-primary">Go Home</a>
   </div>
