--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
         <img src="{{ v.img.url }}" class="w-100 shadow-1-strong rounded mb-4" alt="..." />
         <h1 class="mt-2">{{ v.img_title }}<a href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
         </h1>
-
+        <a href="#">{{ post.author.username }}</a>
       </div>
     </div>
 
