--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -37,6 +37,9 @@
         ul li {
             display: none;
         }
+        #div_id_author{
+            display: none;
+        }
     </style>
     <a class="gohome" href="{% url 'app:home' %}"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="container text-light" style="width: 400px;">
