--- a/templates/comments/comments.html
+++ b/templates/comments/comments.html
@@ -5,8 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>comments</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <img src="{{ comment.img.url }}" alt="">
+
+    <style>
+        body{
+            display: grid;
+            place-items:center;
+            min-height: 100vh; 
+        }
+        #id_author{
+            display: none;
+        }
+        a{
+            text-decoration: none;
+        }
+        form{
+            width: 550px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        #center{
+            width: 400px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 10px;
+        }
+    </style>
+    <div class="card w-50">
+       <div>
+           <div>
+               <div class="row d-flex justify-content-center">
+                   <div class="col-md-8 col-lg-6">
+                    <img src="{{ comment.img.url }}" alt="..." width="520">
+                    <h1>{{ comment.img_title  }}</h1>
+                  <div class="card shadow-0 border" style="background-color: #f0f2f5;">
+                    <div class="card-body p-4">
+                      <div class="card mb-4 w-100">
+                        <div class="card-body w-100">
+                          <p>{{ comment.comment }}</p>
+              
+                          <div class="d-flex justify-content-between w-100">
+                          </div>
+                        </div>
+                      </div>
+              
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+       </div>
+        <div class="card shadow-0 border " style="background-color: #f0f2f5;" id="center">
+            <div class="card-body p-4">
+              <div class="card mb-4 w-100">
+                <div class="card-body w-100">
+                  <p>{{ user_comment.comment }}</p>
+      
+                  <div class="d-flex justify-content-between w-100">
+                    <div class="d-flex flex-row align-items-center">
+                      <i class="fas fa-user"></i>
+                      <a class="text-dark" href="{% url 'app:public_profile' comment.author.username %}"><p class="small mb-0 ms-2">{{ comment.author.first_name }}</p></a>
+                    </div>
+                      <div>likes: 0</div>
+                      <div>replise: 0</div>
+                </div>
+                </div>
+              </div>
+      
+
+            </div>
+          </div>
+
+        <form  method="post">
+            {% csrf_token %}
+            <div class="mt-3 d-flex flex-row align-items-center p-3 form-color">
+                {{ form.comment }}
+                {{ form.author }}
+                <button type="submit" class="btn btn-info"><i class="fa-solid fa-paper-plane fa-lg"></i></button>
+              </div>
+        </form>
+    </div>
+    <script>
+                let autor = document.querySelector('#id_author')
+        let options = autor.querySelectorAll('option')
+        options.forEach(function (item) {
+            if (item.innerHTML == '{{ request.user.username }}') {
+                item.selected = true
+            }
+            else {
+                item.remove()
+            }
+        })
+    </script>
 </body>
 </html>
