--- a/templates/profile/public.html
+++ b/templates/profile/public.html
@@ -44,10 +44,10 @@
           <div class="card" style="border-radius: 15px;">
             <div class="card-body text-center">
               <div class="mt-3 mb-4">
-                {% if user.img %}
-                <img src="{{ user.img.url }}" alt="..."  id="profil">
+                {% if user.profile_pic %}
+                <img src="{{ user.profile_pic.url }}" alt="..."  id="profil">
                 {% endif %}
-                {% if not user.img %}
+                {% if not user.profile_pic %}
                 <img src="{% static 'imgs/userprofile.png' %}" class="rounded-circle img-fluid" style="width: 100px;" />
                 {% endif %}
               </div>
