--- a/templates/home.html
+++ b/templates/home.html
@@ -15,41 +15,159 @@
 </head>
 
 <body>
+  <style>
+    .sk-chase {
+      width: 40px;
+      height: 40px;
+      position: relative;
+      animation: sk-chase 2.5s infinite linear both;
+    }
+
+    .sk-chase-dot {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      animation: sk-chase-dot 2.0s infinite ease-in-out both;
+    }
+
+    .sk-chase-dot:before {
+      content: '';
+      display: block;
+      width: 25%;
+      height: 25%;
+      background-color: #fff;
+      border-radius: 100%;
+      animation: sk-chase-dot-before 2.0s infinite ease-in-out both;
+    }
+
+    .sk-chase-dot:nth-child(1) {
+      animation-delay: -1.1s;
+    }
+
+    .sk-chase-dot:nth-child(2) {
+      animation-delay: -1.0s;
+    }
+
+    .sk-chase-dot:nth-child(3) {
+      animation-delay: -0.9s;
+    }
+
+    .sk-chase-dot:nth-child(4) {
+      animation-delay: -0.8s;
+    }
+
+    .sk-chase-dot:nth-child(5) {
+      animation-delay: -0.7s;
+    }
+
+    .sk-chase-dot:nth-child(6) {
+      animation-delay: -0.6s;
+    }
+
+    .sk-chase-dot:nth-child(1):before {
+      animation-delay: -1.1s;
+    }
+
+    .sk-chase-dot:nth-child(2):before {
+      animation-delay: -1.0s;
+    }
+
+    .sk-chase-dot:nth-child(3):before {
+      animation-delay: -0.9s;
+    }
+
+    .sk-chase-dot:nth-child(4):before {
+      animation-delay: -0.8s;
+    }
+
+    .sk-chase-dot:nth-child(5):before {
+      animation-delay: -0.7s;
+    }
+
+    .sk-chase-dot:nth-child(6):before {
+      animation-delay: -0.6s;
+    }
+
+    @keyframes sk-chase {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes sk-chase-dot {
+
+      80%,
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes sk-chase-dot-before {
+      50% {
+        transform: scale(0.4);
+      }
+
+      100%,
+      0% {
+        transform: scale(1.0);
+      }
+    }
+  </style>
   {% include 'includes/nav.html' %}
   <hr class="container">
   {% block content %}
+  <div class="spinner">
+    <div class="sk-chase">
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+    </div>
+  </div>
+
   <div class="vid container">
     {% for v in imgpost %}
-  
+
     <div class="row" style="width: 455px;">
       <div class="col-lg-11 ">
         <img src="{{ v.img.url }}" class="w-100 shadow-1-strong rounded mb-4" alt="..." />
-        <h1 class="mt-2">{{ v.img_title }}  <a href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
+        <h1 class="mt-2">{{ v.img_title }} <a href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
         </h1>
         <div class="flex" style="display: flex; justify-content: center;">
-          <a href="{% url 'app:comments' v.pk %} " class="text-dark fa-lg"><i class="fa-solid fa-comment "></i></a>
-          <a style="margin-left: 60px; color: #000; text-decoration: none;" href="{% url 'app:public_profile' v.author.username %}"><i class="fa-solid fa-user-check" style="margin-left: 10px;"></i>@{{ v.author.username }}</a>
-          <p style="margin-left: 60px;"><i class="fa-solid fa-calendar-check text-dark" style="margin-right: 10px;"></i>{{ v.creat_time }}</p>
+          <a href="#" class="text-dark fa-lg"><i class="fa-solid fa-comment "></i></a>
+          <a style="margin-left: 60px; color: #000; text-decoration: none;"
+            href="{% url 'app:public_profile' v.author.username %}"><i class="fa-solid fa-user-check"
+              style="margin-left: 10px;"></i>@{{ v.author.username }}</a>
+          <p style="margin-left: 60px;"><i class="fa-solid fa-calendar-check text-dark"
+              style="margin-right: 10px;"></i>{{ v.creat_time }}</p>
         </div>
       </div>
     </div>
 
     {% endfor %}
+  </div>
+    {% endblock content %}
 
-  {% endblock content %}
 
 
+    <script>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
+    </script>
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"></script>
 
-  <script src="{% static 'js/main.js' %}"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 
 </html>
