--- a/templates/home.html
+++ b/templates/home.html
@@ -19,11 +19,18 @@
     .dn {
       display: none;
     }
-
-
+    .cen{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 95vh;
+    }
+    .mh{
+      min-height: 0vh;
+    }
     .sk-cube-grid {
-      width: 40px;
-      height: 40px;
+      width: 150px;
+      height: 150px;
       margin: 100px auto;
     }
 
@@ -114,6 +121,7 @@
   {% include 'includes/nav.html' %}
   {% block content %}
   <hr class="container">
+  <div class="cen">
   <div class="spiner">
     <div class="sk-cube-grid">
       <div class="sk-cube sk-cube1"></div>
@@ -127,6 +135,7 @@
       <div class="sk-cube sk-cube9"></div>
     </div>
   </div>
+  </div>
   <div class="vid container">
 
   </div>
@@ -138,31 +147,15 @@
   <script>
     let vid = document.querySelector('.vid')
     let spin = document.querySelector('.spiner')
+    let cen = document.querySelector('.cen')
     $.ajax({
       type: 'GET',
       url: '/',
       success: function (res) {
         setTimeout(()=>{
           spin.classList.add('dn')
-        vid.innerHTML = `{% for v in imgpost %}
-
-<div class="row" style="width: 455px;">
-  <div class="col-lg-11 ">
-    <img src="{{ v.img.url }}" class="w-100 shadow-1-strong rounded mb-4" alt="..." />
-    <h1 class="mt-2">{{ v.img_title }} <a href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
-    </h1>
-    <div class="flex" style="display: flex; justify-content: center;">
-      <a href="#" class="text-dark fa-lg"><i class="fa-solid fa-comment "></i></a>
-      <a style="margin-left: 60px; color: #000; text-decoration: none;"
-        href="{% url 'app:public_profile' v.author.username %}"><i class="fa-solid fa-user-check"
-          style="margin-left: 10px;"></i>@{{ v.author.username }}</a>
-      <p style="margin-left: 60px;"><i class="fa-solid fa-calendar-check text-dark"
-          style="margin-right: 10px;"></i>{{ v.creat_time }}</p>
-    </div>
-  </div>
-</div>
-
-{% endfor %}`
+          cen.classList.add('mh')
+        vid.innerHTML = `{% include 'index.html' %}`
         }, 1000)
       }
     })
