--- a/templates/helpers/404.html
+++ b/templates/helpers/404.html
@@ -214,7 +214,7 @@ button {
   padding-bottom: 40px;
   max-width: 960px;
   margin: 0 auto;
-  color: #fff;
+  color: #181828;
 }
 
 .message__text {
@@ -224,14 +224,14 @@ button {
   padding: 0 60px;
   max-width: 680px;
   margin: auto;
-  color: #fff;
+  color: #181828;
 }
 
 .error__nav {
   max-width: 600px;
   margin: 40px auto 0;
   text-align: center;
-  color: #fff;
+  color: #000;
 }
 
 .e-nav__form {
