--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,11 @@
       </div>
     </div>
     <div class="bg-image" data-mdb-ripple-color="light">
-      <img class="img-fluid" src="{{ v.img.url }}" alt="{{ v.img_title }} img" style="height: 200px !important; width: 100%;" />
-     <div class="d-flex" style="justify-content: space-around;">
-      <a href="#">
-        <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">Read more</div>
-      </a>
+      <img class="img-fluid" id="img" src="{{ v.img.url }}" alt="{{ v.img_title }} img" style="height: 200px !important; width: 90%;" />
+     <div class="d-flex" style="justify-content: space-around; ">
+      <div>
+        <span><i class="fa-solid fa-expand fa-lg icon"></i></span>
+      </div>
       <a class="text-dark" href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
      </div>
     </div>
