--- a/templates/user.html
+++ b/templates/user.html
@@ -174,7 +174,7 @@ body {
             <div class="counter col_fourth">
                 <i class="fa fa-user fa-2x"></i>
                 <h2 class="timer count-title count-number" data-to="{{ usersnum }}" data-speed="2000"></h2>
-                <p class="count-text ">SomeText GoesHere</p>
+                <p class="count-text ">Users</p>
             </div>
 
         
