--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -63,12 +63,9 @@
           <div class="card" style="border-radius: 15px;">
             <div class="card-body text-center">
               <div class="mt-3 mb-4">
-                {% if request.user.profile_pic %}
-                <img src="{{ request.user.profile_pic.url }}" alt="..."  id="profil">
-                {% endif %}
-                {% if not request.user.profile_pic %}
-                <img src="{% static 'imgs/userprofile.png' %}" class="rounded-circle img-fluid" style="width: 100px;" />
-                {% endif %}
+                
+                <img src="{{ user.profile_pic.url }}" alt="..."  id="profil">
+                
               </div>
               <h4 class="mb-2">{% if request.user.first_name %}
                 {{ request.user.first_name }}
