--- a/templates/profile/public.html
+++ b/templates/profile/public.html
@@ -45,7 +45,7 @@
             <div class="card-body text-center">
               <div class="mt-3 mb-4">
                 
-                <img src="{{ user.profile_pic.url }}" alt="..."  id="profil">
+                <img src="{{ user.profile.img.url }}" alt="..."  id="profil">
              
                
               </div>
