--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <div class="card  ms-3 mt-3" style="width: 350px; height: 340px;">
     <div class="card-body d-flex flex-row" >
       <div style="text-align: center;" >
-        <img src="{{ v.author.profile_pic.url }}" class="rounded-circle me-3" height="50px" width="50px" />
+        <img src="{{ v.author.profile.img.url }}" class="rounded-circle me-3" height="50px" width="50px" />
         <div>
           <a style=" color: #000; text-decoration: none; font-size: 12px;"
             href="{% url 'app:public_profile' v.author.username %}">@{{ v.author.username }}</a>
