--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -64,7 +64,7 @@
             <div class="card-body text-center">
               <div class="mt-3 mb-4">
                 
-                <img src="{{ user.profile_pic.url }}" alt="..."  id="profil">
+                <img src="{{ user.profile.img.url }}" alt="..."  id="profil">
                 
               </div>
               <h4 class="mb-2">{% if request.user.first_name %}
