--- a/templates/results.html
+++ b/templates/results.html
@@ -10,7 +10,7 @@
   <div class="card" style="width: 350px; height: 340px;">
     <div class="card-body d-flex flex-row" >
       <div style="text-align: center;" >
-        <img src="{{ v.author.profile_pic.url }}" class="rounded-circle me-3" height="50px" width="50px" />
+        <img src="{{ v.author.profile.img.url }}" class="rounded-circle me-3" height="50px" width="50px" />
       
         <div>
           <a style=" color: #000; text-decoration: none; font-size: 12px;"
