--- a/templates/profile/profisionaledit.html
+++ b/templates/profile/profisionaledit.html
@@ -75,14 +75,13 @@
     <a class="gohome" href="{% url 'app:home' %}"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="container text-light" style="width: 600px;">
         <h1>Edit profile</h1>
-        <form method="post" ><!-- bu yerda ## enctype="multipart/form-data" ## rasm yuklash uchun  -->
+        <form method="post" enctype="multipart/form-data"><!-- bu yerda ## enctype="multipart/form-data" ## rasm yuklash uchun  -->
            <div id="owerflow">
             {% csrf_token %}
             {{ form|crispy }}
            </div>
             <button type="submit" class="btn btn-info w-100 text-center text-light">update</button>
         </form>
-        <a href="{% url 'app:editprofile' %}">other settings</a>
     </div>
 
     <script>
